--- a/css/shaarli.css
+++ b/css/shaarli.css
@@ -4012,7 +4012,6 @@ pre {
 
 #shaarli-menu {
   background: var(--main-color);
-  width: 100%;
   margin-bottom: 20px; }
 
 .shaarli-menu {
@@ -4416,10 +4415,8 @@ h2.linklist-item-title {
   margin: .5em 0 0; }
 
 .linklist-item-thumbnail {
-  position: absolute;
-  top: 66px;
-  right: -190px;
-  z-index: 50; }
+  float: right;
+  margin: 16px 0 16px 16px; }
 
 .linklist-item-infos {
   position: absolute;
@@ -4931,24 +4928,32 @@ form[name='linkform'].page-form {
   font-size: 14px;
   margin-top: 16px; }
 
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 48.0625em) {
   .pure-u-lg-0 {
     display: none !important; }
+  .pure-u-lg-1-2, .pure-u-lg-12-24 {
+    width: 50%; }
   .pure-u-lg-visible {
     display: inline-block !important; }
+  #shaarli-menu {
+    min-width: 1140px; }
   .page-form .submit-buttons {
     position: relative; }
     .page-form .submit-buttons .button.button-red {
       position: absolute;
       right: 5%; } }
 
-@media screen and (max-width: 64em) {
+@media screen and (max-width: 48.0625em) {
   .pure-g-full {
     width: 100%; }
   .pure-g-full > * {
     padding: 0; }
   .pure-u-lg-visible {
     display: none !important; }
+  #shaarli-menu {
+    width: 100%; }
+  .searchform div.awesomplete {
+    display: block; }
   .menu-toggle {
     display: block; }
   #shaarli-menu.open .pure-menu-item {
