--- a/sass/shaarli.scss
+++ b/sass/shaarli.scss
@@ -207,7 +207,6 @@ pre {
 // MENU
 #shaarli-menu {
 	background: var(--main-color);
-	width: 100%;
 	margin-bottom: 20px;
 }
 
@@ -535,7 +534,6 @@ pre {
 }
 
 // CONTENT - LINKLIST PAGING
-// 64em -> lg
 .linklist-filters {
 	display: inline-block;
 	position: absolute;
@@ -831,10 +829,8 @@ h2.linklist-item-title {
 }
 
 .linklist-item-thumbnail {
-	position: absolute;
-	top: 66px;
-	right: -190px;
-	z-index: 50;
+	float: right;
+	margin: 16px 0 16px 16px;
 }
 
 .linklist-item-infos {
@@ -1625,15 +1621,23 @@ form {
 	margin-top: 16px;
 }
 
-// 64em -> lg
-@media screen and (min-width: 64em) {
+@media screen and (min-width: 48.0625em) {
+
   .pure-u-lg-0 {
     display: none !important;
+  }
+
+  .pure-u-lg-1-2, .pure-u-lg-12-24 {
+    width: 50%;
   }
 
   .pure-u-lg-visible {
     display: inline-block !important;
   }
+
+	#shaarli-menu {
+		min-width: 1140px;
+	}
 
   .page-form {
     .submit-buttons {
@@ -1649,7 +1653,7 @@ form {
   }
 }
 
-@media screen and (max-width: 64em) {
+@media screen and (max-width: 48.0625em) {
 	.pure-g-full {
 		width: 100%;
 	}
@@ -1658,6 +1662,14 @@ form {
 	}
 	.pure-u-lg-visible {
 		display: none !important;
+	}
+
+	#shaarli-menu {
+		width: 100%;
+	}
+
+	.searchform div.awesomplete {
+		display: block;
 	}
 
 	.menu-toggle {
